# docu-processing

./: .gitignore  config.py  file_utils.py  main.py  ollama.md  pyproject.toml  readme.md
data/docs_md/: dummy_statement.md  nfm_statement_082824.md
docs/streamlit-ui/: STREAMLIT_QUICK_REFERENCE.md  STREAMLIT_README.md
notebooks/: appl_1.ipynb  chat_ollama.ipynb  test_nb.ipynb
notebooks/advanced_python/: A Simple Function Timer.ipynb  merge_sort.ipynb  pydantic.ipynb
notebooks/deeplearning/: building_agentic_docu_understanding.ipynb  docu_proc_with_ocr.py  document_proc_with_ocr.ipynb  helper.py
notebooks/intro_2_ml_w_python/: appl_1.ipynb  docu_chunk.ipynb  test_nb.ipynb
notebooks/marimo_nb/: marimo_nb_1.py
scripts/: cc.md  chat_with_ollama.py  download_from_drive.py  ollama_helper.py  run_full_pipeline.py
streamlit_ui/: EXAMPLE_README.md  INDEX.md  README.md  README_streamlit_ui.md  STREAMLIT_COMPLETION_CHECKLIST.md  STREAMLIT_FRAMEWORK_SUMMARY.md  STREAMLIT_QUICK_REFERENCE.md  STREAMLIT_README.md  STREAMLIT_SETUP.md  __init__.py  app_template.py  example_app.py  requirements.txt
streamlit_ui/components/: __init__.py
streamlit_ui/core/: __init__.py  app.py  config.py  page.py
streamlit_ui/pages/: __init__.py
streamlit_ui/utils/: __init__.py  logger.py  state.py
