[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-processing"
version = "0.1.0"
description = "Document processing and RAG system using Docling, LangChain, and ChromaDB"
readme = "readme.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Arindam Samanta", email = "samantoz@gmail.com"}
]
license = {text = "MIT"}
keywords = ["document-processing", "rag", "embeddings", "pdf", "langchain", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ipykernel",
    "jupyter",
    "pandas",
    "matplotlib",
    "transformers",
    "torch",
    "paddlepaddle==3.0.0",
    "paddleocr",
    "pytesseract",
    "pillow",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-openai==0.1.7",
    "langchain-core==0.1.52",
    "python-dotenv",
    "landingai-ade",
    "pymupdf",
    "pydantic_settings",
    "chromadb",
    "tesseract>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "docu-processing[dev]",
]

[project.urls]
Homepage = "https://github.com/samantoz/docu-processing"
Repository = "https://github.com/samantoz/docu-processing"
Issues = "https://github.com/samantoz/docu-processing/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

# Note: docling and torch dependencies removed from main dependencies due to platform compatibility issues
# For macOS x86_64, install separately:
# uv pip install docling --index-url https://download.pytorch.org/whl/cpu --extra-index-url https://pypi.org/simple
# 
# For other platforms, install normally:
# uv pip install docling torch torchvision
